# scholarship-finder

./: .env.example  .gitignore  README.md  SHIP_PLAN.md
.github/workflows/: ci.yml  scrape.yml
scraper/: bump_stale_deadlines.py  conftest.py  hide_auto_considered.py  pyproject.toml  scrape  seed_colleges.py
scraper/src/scraper/: __init__.py  db.py  extract_college.py  models.py  run.py
scraper/src/scraper/sources/: __init__.py  base.py  florida_state.py  nationals.py  northeast_florida_local.py  uf_sfa.py
scraper/tests/: test_florida_state.py  test_uf_sfa.py
supabase/migrations/: 0001_init.sql  0002_seed_north_florida_colleges.sql  0010_notify_signups.sql
web/: package-lock.json  package.json  vercel.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/match/: route.ts
web/app/api/notify/: route.ts
web/app/colleges/: page.tsx
web/app/colleges/[slug]/: page.tsx
web/app/privacy/: page.tsx
web/app/profile/: page.tsx
web/app/scholarships/[id]/: page.tsx
web/app/terms/: page.tsx
web/components/: ApplyCTA.tsx  Footer.tsx  HeroIllustration.tsx  Masthead.tsx  MatchSection.tsx  PaidTierCTA.tsx  ScholarshipCard.tsx  ScholarshipListWithMatches.tsx  useProfile.ts
web/lib/: format.ts  match-prefilter.ts  profile.ts  scholarship-utils.ts
web/lib/claude/: client.ts  match-prompt.ts
web/lib/db/: queries.ts
web/lib/supabase/: client.ts  server.ts
