[project]
name = "scholarship-scraper"
version = "0.1.0"
description = "Scrapes college scholarships into Supabase for the Scholarship Finder MVP."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-dotenv>=1.0",
    "supabase>=2.7",
    "playwright>=1.46",
    "pydantic>=2.8",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
scrape = "scraper.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
